# ControlSoftware

./: .gitignore  .gitmodules  Blift.csv  CMakeLists.txt  ControlSoftware.code-workspace  README.md  main.cpp
datafiles/: Alift.csv  Blift.csv  cent.csv  control.csv  cpuTime.csv  nomState.csv  reference.csv  state.csv
